# botjs

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  generate_workspace.sh
block/ComInterface/BjsSerialArduino/arduino_setup/sketch_BjsSerialArduino/: sketch_BjsSerialArduino.ino
block/body/: CMakeLists.txt
block/body/src/: BodyBlock.cpp  BodyBlock.hpp
block/bodyasm/: CMakeLists.txt
block/bodyasm/src/: BodyAsmBlock.cpp  BodyAsmBlock.hpp
block/cominterface/bjsserialarduino/: BjsSerialArduinoBlock.cpp  BjsSerialArduinoBlock.hpp  README.md  script.cmake
block/cominterface/bjsserialarduino/arduino_setup/: README.md
block/cominterface/bjsserialarduino/arduino_setup/sketch_BjsSerialArduino/: sketch_BjsSerialArduino.ino
block/composer/: BlockMenu.cpp  BlockMenu.hpp  BlockMenuItem.cpp  BlockMenuItem.hpp  BlockViewMode.hpp  CMakeLists.txt  ComposerBlock.cpp  ComposerBlock.hpp  ComposerStyle.hpp  ComposerWidget.cpp  ComposerWidget.hpp  GraphicsBlockItem.cpp  GraphicsBlockItem.hpp  GraphicsBlockScene.cpp  GraphicsBlockScene.hpp  GraphicsBlockView.cpp  GraphicsBlockView.hpp  GraphicsLinkItem.cpp  GraphicsLinkItem.hpp  README.md  script.cmake
block/composer/src/: BlockMenu.cpp  BlockMenu.hpp  BlockMenuItem.cpp  BlockMenuItem.hpp  ComposerBlock.cpp  ComposerBlock.hpp  ComposerWidget.cpp  ComposerWidget.hpp  GraphicsBlockItem.cpp  GraphicsBlockItem.hpp  GraphicsLinkItem.cpp  GraphicsLinkItem.hpp
block/controller/bjsushcsr04ctrl/: BjsUsHCSR04CtrlBlock.cpp  BjsUsHCSR04CtrlBlock.hpp  script.cmake
block/interface/bjsserialarduino/arduino_setup/: README.md
block/interface/bjsserialarduino/arduino_setup/BotDevice/: BotDevice.cpp  BotDevice.h
block/joint/: CMakeLists.txt  JointBlock.hpp  README.md
block/joint/src/: JointBlock.cpp  JointBlock.hpp
block/kinasm/: CMakeLists.txt  KinAsmBlock.cpp  KinAsmBlock.hpp
block/kinasm/src/: KinAsmBlock.hpp
block/link/: CMakeLists.txt  LinkBlock.cpp  LinkBlock.hpp  README.md
block/link/src/: LinkBlock.cpp  LinkBlock.hpp
block/link_joint/: CMakeLists.txt  JointBlock.cpp  JointBlock.hpp  LinkBlock.cpp  LinkBlock.hpp
block/link_joint/src/: JointBlock.cpp  JointBlock.hpp  LinkBlock.cpp  LinkBlock.hpp
block/network/: CMakeLists.txt  NetworkBlock.cpp  NetworkBlock.hpp  NetworkMessage.cpp  NetworkMessage.hpp  NetworkThread.cpp  NetworkThread.hpp  README.md  script.cmake
block/network/src/: NetworkBlock.cpp  NetworkBlock.hpp  NetworkThread.cpp  NetworkThread.hpp
block/robot/: CMakeLists.txt  README.md  RobotBlock.cpp  RobotBlock.hpp  script.cmake
block/robot/src/: RobotBlock.cpp  RobotBlock.hpp
block/sensordata/distancesensordata/: DistanceSensorBlock.hpp  DistanceSensorDataBlock.cpp  DistanceSensorDataBlock.hpp  README.md  script.cmake
block/shell/: CMakeLists.txt  README.md  ShellBlock.cpp  ShellBlock.hpp  ShellThread.hpp
block/shell/src/: ShellBlock.cpp  ShellBlock.hpp  ShellThread.cpp  ShellThread.hpp
block/spy/: CMakeLists.txt  README.md  SpyBlock.cpp  SpyBlock.hpp  SpyWidget.cpp  SpyWidget.hpp  SpyWidgetBody.cpp  SpyWidgetBody.hpp  SpyWidgetFooter.cpp  SpyWidgetFooter.hpp  SpyWidgetHeader.cpp  SpyWidgetHeader.hpp  ViewerIProperty.hpp  ViewerQMatrix4x4.cpp  ViewerQMatrix4x4.hpp  ViewerQVectornD.cpp  script.cmake
block/spy/src/: DoubleLabel.hpp  SpyBlock.cpp  SpyBlock.hpp  SpyWidget.cpp  SpyWidget.hpp  SpyWidgetBody.cpp  SpyWidgetBody.hpp  SpyWidgetFooter.cpp  SpyWidgetFooter.hpp  SpyWidgetHeader.cpp  SpyWidgetHeader.hpp  ViewerQMatrix4x4.cpp  ViewerQMatrix4x4.hpp  ViewerQVectornD.hpp  ViewerRealList.cpp  ViewerRealList.hpp  ViewerVector3D.cpp  ViewerVector3D.hpp
block/spy/src/widget/: LogTag.hpp  Selector.hpp  ViewerQMatrix4x4.cpp  ViewerQMatrix4x4.hpp  ViewerVector3D.hpp
block/spy/viewer/: SetButton.hpp  ViewerInteger.cpp  ViewerInteger.hpp
block/synchronizer/src/: SynchronizerBlock.cpp  SynchronizerBlock.hpp
block/viewer3d/: CMakeLists.txt  README.md  RenderNode.cpp  RenderNode.hpp  VertexBufferObject.cpp  Viewer.cpp  Viewer.hpp  Viewer3DBlock.cpp  Viewer3DBlock.hpp
block/viewer3d/src/: Glub.cpp  Glub.hpp  RenderNode.cpp  RenderNode.hpp  RenderNodeJoint.hpp  RenderNodeKinAsm.hpp  RenderNodeRobot.hpp  VertexBufferObject.cpp  VertexBufferObject.hpp  Viewer.cpp  Viewer.hpp  Viewer3DBlock.cpp  Viewer3DBlock.hpp
cmake/: app_common_config.cmake  block_common_config.cmake  botjs_config.cmake  common_config.cmake
cmake/module/: FindBotjs.cmake
core/: CMakeLists.txt  README.md  main.cpp  script.cmake
core/app/: BotApp.cpp  BotApp.hpp  BotEngine.cpp  BotEngine.hpp  CoreBlock.cpp  CoreBlock.hpp
core/block/: BotBlock.cpp  BotBlock.hpp  GuiBlock.hpp  IProperty.hpp  LogBuffer.hpp  PhysicBlock.hpp  README.md
core/brain/: BrainBlock.hpp
core/cominterface/: ComInterfaceBlock.cpp  ComInterfaceBlock.hpp  ComInterfaceThread.cpp  ComInterfaceThread.hpp
core/controller/: ControllerBlock.hpp  ControllerSensorBlock.hpp  CtrlMail.hpp
core/gui/: GuiBlock.cpp  GuiBlock.hpp
core/physic/: PhysicBlock.hpp
core/robot/joint/: JointBlock.cpp  script.cmake
core/robot/kinasm/: KinAsmBlock.cpp  README.md
core/robot/link/: script.cmake
core/rsc/: ressources.qrc
core/sensordata/: SensorDataBlock.hpp
core/src/: main.cpp
core/src/app/: BotApp.cpp  BotApp.hpp  BotEngine.cpp  BotEngine.hpp  CoreBlock.cpp  CoreBlock.hpp
core/src/block/: BotBlock.hpp  IProperty.hpp  LogBuffer.cpp  LogBuffer.hpp  PhysicBlock.hpp
core/src/type/: QRealList.hpp  ShapeData.cpp  ShapeData.hpp  Type.hpp
core/stream/: JsStream.hpp
core/type/: EnumStringMapper.hpp  ShapeData.hpp  Type.hpp
rsc/: ressources.qrc
script/: build_raspbot.sh  configure.sh
tutorial/00_build_environment/: README.md
tutorial/01_data_and_spy/: README.md  script.js
tutorial/01_shell_and_spy/: README.md  script.js
tutorial/01_spies/: script.js
tutorial/02_block_composer/: script.js
tutorial/02_data_and_robot/: script.js
tutorial/03_robot_and_viewer/: script.js
tutorial/05_arm_model/: script.js
tutorial/05_network/: script.js
tutorial/05_prototype/: script.js
tutorial/05_prototype_model/: README.md  script.js
(+5 files in other folders)
